[gd_scene load_steps=30 format=3 uid="uid://dx8heb46x0fpv"]

[ext_resource type="Texture2D" uid="uid://cgv8tnfc5ran" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/FrontWalk/NobleManFrontWalk1.png" id="1_xs3tm"]
[ext_resource type="Script" path="res://scripts/npc/noble_man.gd" id="1_y5j02"]
[ext_resource type="Texture2D" uid="uid://d3ngvrisxlewg" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/BackWalk/NobleManBackWalk1.png" id="2_3y3ck"]
[ext_resource type="Texture2D" uid="uid://cq6qc52si6g54" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/BackWalk/NobleManBackWalk2.png" id="3_14urt"]
[ext_resource type="Texture2D" uid="uid://dl2uh6iaf25xj" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/BackWalk/NobleManBackWalk3.png" id="4_sv8ou"]
[ext_resource type="Texture2D" uid="uid://br4v1fy6u7s7v" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/BackWalk/NobleManBackWalk4.png" id="5_t7rd0"]
[ext_resource type="Texture2D" uid="uid://c4q7v22ho33w8" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/FrontWalk/NobleManFrontWalk2.png" id="6_2by5a"]
[ext_resource type="Texture2D" uid="uid://b4ypy526xl3sh" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/FrontWalk/NobleManFrontWalk3.png" id="7_to77l"]
[ext_resource type="Texture2D" uid="uid://mi72iklqvxk8" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/FrontWalk/NobleManFrontWalk4.png" id="8_wwwes"]
[ext_resource type="Texture2D" uid="uid://pq6pkkgxmlaj" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/SideWalk/NobleManSideWalk1.png" id="9_afatn"]
[ext_resource type="Texture2D" uid="uid://brj2y1exyqxgv" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/SideWalk/NobleManSideWalk2.png" id="10_84gvj"]
[ext_resource type="Texture2D" uid="uid://cwywqnawr5rek" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/SideWalk/NobleManSideWalk3.png" id="11_w1rmm"]
[ext_resource type="Texture2D" uid="uid://ccsxxbdsxhsbs" path="res://assets/NPC/RPGCharactersPortraits+SpritesPack2Demo/NobleMan/Original/SideWalk/NobleManSideWalk4.png" id="12_i2hkq"]
[ext_resource type="FontFile" uid="uid://cxfl371v85e08" path="res://assets/fonts/hf-free-complete/equipment-pro-v1.1/EquipmentPro.ttf" id="14_e2tpm"]
[ext_resource type="Texture2D" uid="uid://c08limi3kpb2r" path="res://assets/ui/Individual Icons/keyboard_15.png" id="15_koix8"]
[ext_resource type="Texture2D" uid="uid://dwh27syqaocc5" path="res://assets/ui/Individual Icons/keyboard_116.png" id="16_0llgq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brrmt"]
size = Vector2(11, 26)

[sub_resource type="Animation" id="Animation_u0v7j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_xs3tm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1kllj"]
resource_name = "idler"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_xs3tm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3ofhe"]
resource_name = "run_back"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_3y3ck"), ExtResource("3_14urt"), ExtResource("4_sv8ou"), ExtResource("5_t7rd0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 1, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 1, 1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_k6wtn"]
resource_name = "run_front"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_xs3tm"), ExtResource("6_2by5a"), ExtResource("7_to77l"), ExtResource("8_wwwes")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 1, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 1, 1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_wt876"]
resource_name = "run_side"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("9_afatn"), ExtResource("10_84gvj"), ExtResource("11_w1rmm"), ExtResource("12_i2hkq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 1, 1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4so3x"]
_data = {
"RESET": SubResource("Animation_u0v7j"),
"idler": SubResource("Animation_1kllj"),
"run_back": SubResource("Animation_3ofhe"),
"run_front": SubResource("Animation_k6wtn"),
"run_side": SubResource("Animation_wt876")
}

[sub_resource type="Curve2D" id="Curve2D_nw20i"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 14, 0, 0, 0, 0, -1, 33, 0, 0, 0, 0, -1, 51, 0, 0, 0, 0, 14, 57, 0, 0, 0, 0, 81, 54, 0, 0, 0, 0, 119, 52, 0, 0, 0, 0, 162, 41, 0, 0, 0, 0, 174, 15, 0, 0, 0, 0, 225, -9, 0, 0, 0, 0, 299, -34, 0, 0, 0, 0, 335, -47, 0, 0, 0, 0, 378, -53, 0, 0, 0, 0, 467, -53, 0, 0, 0, 0, 509, -59, 0, 0, 0, 0, 524, -74, 0, 0, 0, 0, 565, -100, 0, 0, 0, 0, 608, -117, 0, 0, 0, 0, 642, -118, 0, 0, 0, 0, 671, -115, 0, 0, 0, 0, 697, -99, 0, 0, 0, 0, 716, -80, 0, 0, 0, 0, 731, -67, 0, 0, 0, 0, 755, -47, 0, 0, 0, 0, 774, -30, 0, 0, 0, 0, 831, -17, 0, 0, 0, 0, 858, -29, 0, 0, 0, 0, 904, -61, 0, 0, 0, 0, 929, -95, 0, 0, 0, 0, 934, -150, 0, 0, 0, 0, 927, -193, 0, 0, 0, 0, 937, -247, 0, 0, 0, 0, 935, -292, 0, 0, 0, 0, 946, -322, 0, 0, 0, 0, 989, -336, 0, 0, 0, 0, 1039, -347, 0, 0, 0, 0, 1051, -367, 0, 0, 0, 0, 1063, -393, 0, 0, 0, 0, 1066, -418, 0, 0, 0, 0, 1068, -432)
}
point_count = 39

[sub_resource type="Animation" id="Animation_gd7o2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D:curve")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Curve2D_nw20i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path2D/PathFollow2D:progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Path2D/PathFollow2D:rotates")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Path2D/PathFollow2D:progress_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:run_side")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:run_back")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:run_front")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dacy6"]
resource_name = "walk"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D:curve")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Curve2D_nw20i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path2D/PathFollow2D:progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1496.72]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Path2D/PathFollow2D:rotates")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Path2D/PathFollow2D:progress_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:run_side")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 2.7, 3.2, 12.7, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:run_back")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.7, 3.2, 12.7, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:run_front")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_afgo2"]
_data = {
"RESET": SubResource("Animation_gd7o2"),
"walk": SubResource("Animation_dacy6")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_lip0s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_koix8")
}, {
"duration": 1.0,
"texture": ExtResource("16_0llgq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_q7b4k"]
radius = 70.0286

[node name="NobleMan" type="Node2D" node_paths=PackedStringArray("_HUD", "_HUDTitler")]
script = ExtResource("1_y5j02")
run_back = true
run_side = true
_HUD = NodePath("HUD")
_HUDTitler = NodePath("CanvasLayer")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(0, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_brrmt")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("1_xs3tm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
"": SubResource("AnimationLibrary_4so3x")
}

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_nw20i")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(0, 14)
rotates = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Path2D/PathFollow2D"]
remote_path = NodePath("../../../CharacterBody2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_afgo2")
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-1, 7)
scale = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="Node2D"]
offset_left = -28.0
offset_top = -36.0
offset_right = 39.0
offset_bottom = -13.0
theme_override_fonts/font = ExtResource("14_e2tpm")
text = "interagir"
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D"]
position = Vector2(38, -28)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_lip0s")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_q7b4k")
debug_color = Color(0.924898, 4.43766e-05, 0.678286, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
